--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "genAntlr": "./scripts/genAntlr.sh",
-    "antlr4ts": "antlr4ts -visitor ./src/grammar/g4/RMGLParser.g4",
     "test": "jest"
   },
   "dependencies": {
-    "antlr4": "^4.13.1-patch-1",
-    "antlr4ts": "^0.5.0-alpha.4",
+    "antlr4": "^4.13.1",
     "pixi.js": "^7.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -35,6 +33,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
