--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "antlr4": "^4.13.1",
     "pixi.js": "^7.2.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@reduxjs/toolkit": "^1.9.5",
+    "antd": "^5.8.6",
+    "lodash": "^4.17.21",
+    "react-redux": "^8.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.24.3",
