feat: 添加pixi render

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
     "paths": {
       "@/*":["./src/*"]
     },
-    "types": ["node"]
+    "types": ["node"],
+    "allowSyntheticDefaultImports": true
   },
   "include": ["src"],
   "exclude": ["node_modules"],
