--- a/package.json
+++ b/package.json
@@ -5,20 +5,20 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": " vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "genAntlr": "./scripts/genAntlr.sh",
     "test": "jest"
   },
   "dependencies": {
-    "antlr4": "^4.13.1",
+    "@reduxjs/toolkit": "^1.9.5",
+    "antd": "^5.8.6",
+    "antlr4": "4.13.1-patch-1",
+    "lodash": "^4.17.21",
     "pixi.js": "^7.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@reduxjs/toolkit": "^1.9.5",
-    "antd": "^5.8.6",
-    "lodash": "^4.17.21",
     "react-redux": "^8.1.2"
   },
   "devDependencies": {
