fix: 修改包名并发布

--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "Dahongpao",
-  "private": true,
+  "name": "dahongpao",
   "version": "0.0.0-alpha",
   "type": "module",
   "scripts": {
