--- a/package.json
+++ b/package.json
@@ -1,7 +1,19 @@
 {
   "name": "dahongpao",
-  "version": "0.0.0-alpha",
-  "type": "module",
+  "version": "0.0.0-alpha-5",
+  "main": "dist/dahongpao.umd.cjs",
+  "module": "dist/dahongpao.mjs",
+  "types": "dist/index.d.ts",
+  "typings": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "exports": {
+    ".": {
+      "import": "/dist/dahongpao.mjs",
+      "require": "./dist/dahongpao.umd.cjs"
+    }
+  },
   "scripts": {
     "dev": "vite",
     "build": " vite build",
@@ -39,6 +51,8 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-libcss": "^1.1.1",
+    "vite-plugin-sass": "^0.1.0"
   }
 }
