--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "antlr4": "4.13.1-patch-1",
     "lodash": "^4.17.21",
     "pixi.js": "^7.2.4",
+    "rbush": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2"
@@ -39,6 +40,7 @@
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.17.0",
+    "@types/rbush": "^3.0.3",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
